Moved JavaScript instructions for room to individual .js file in static

--- a/templates/room.html
+++ b/templates/room.html
@@ -45,38 +45,9 @@
     </button>
   </div>
 </div>
-<script type="text/javascript">
-  var socketio = io();
 
-  const messages = document.getElementById("messages");
+<script src="{{ url_for('static', filename='room.js') }}"></script>
 
-  const createMessage = (name, msg) => {
-    const content = `
-    <div class="text">
-        <span>
-            <strong>${name}</strong>: ${msg}
-        </span>
-        <span class="muted">
-            ${new Date().toLocaleString()}
-        </span>
-        <i onClick="myFunction(this)" class="fa fa-thumbs-up"></i>
-    </div>
-    `;
-    messages.innerHTML += content;
-  };
-
-  socketio.on("message", (data) => {
-    createMessage(data.name, data.message);
-  });
-
-  const sendMessage = () => {
-    const message = document.getElementById("message");
-    if (message.value == "") return;
-    socketio.emit("message", { data: message.value });
-    message.value = "";
-  };
-
-</script>
 {% for msg in messages %}
 <script type="text/javascript">
   createMessage("{{msg.name}}", "{{msg.message}}");
