--- a/templates/room.html
+++ b/templates/room.html
@@ -30,7 +30,7 @@
 </div>
 
 <div class="message-box">
-  <h2>Chat Room: {{ code }}</h2>
+  <h2>{{ code }}</h2>
   <div class="messages" id="messages"></div>
   <div class="inputs">
     <input
